<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>0.1.4</version>
    </parent>

    <artifactId>felles-root</artifactId>
	<version>0.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Foreldrepenger :: Felles :: Root</name>

	<modules>
		<module>felles</module>
		<module>integrasjon</module>
	</modules>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<argLine>-Dfile.encoding=UTF-8</argLine>

        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    </properties>

	<scm>
		<connection>scm:git:https://github.com/navikt/fp-felles.git</connection>
		<developerConnection>scm:git:https://github.com/navikt/fp-felles.git</developerConnection>
		<url>https://github.com/navikt/fp-felles/</url>
		<tag>HEAD</tag>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<configuration>
					<flattenedPomFilename>.flattened</flattenedPomFilename>
					<flattenMode>bom</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>failsafe-verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<reuseForks>true</reuseForks>
					<useFile>true</useFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.ferstl</groupId>
				<artifactId>depgraph-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Github navikt Maven Packages</name>
			<url>https://maven.pkg.github.com/navikt/fp-felles</url>
		</repository>
	</distributionManagement>

</project>
